--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ function getMobileOperatingSystem() {
 function DetectAndServe(){
     let os = getMobileOperatingSystem();
     if (os == "Android") {
-        window.location.href = "http://www.Androidexample.com"; 
+        window.location.href = "https://play.google.com/store/apps/details?id=jp.karaokekan.karakan.karakan&hl=ja&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"; 
     } else if (os == "iOS") {
-        window.location.href = "http://www.IOSexample.com";
+        window.location.href = "https://apps.apple.com/jp/app/%E3%82%AB%E3%83%A9%E3%82%AA%E3%82%B1%E9%A4%A8%E5%85%AC%E5%BC%8F%E3%82%A2%E3%83%97%E3%83%AA/id1341634219";
     } else if (os == "Windows Phone") {
-        window.location.href = "http://www.WindowsPhoneexample.com";
+        window.location.href = "https://karaokekan.jp/app";
     } else {
-        window.location.href = "http://www.NowherLandexample.com";
+        window.location.href = "https://karaokekan.jp/app";
     }
 }
 </script>
