--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         </script>
     </div>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5433245635181525"
+     crossorigin="anonymous"></script>
+    
     <script>
         function getMobileOperatingSystem() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
