--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", sans-serif;
             text-align: center;
             padding-top: 10%;
+            padding-bottom: 100px; /* 広告スペース確保のため下部に余白を追加 */
         }
 
         .app-icon {
@@ -31,6 +32,7 @@
             text-align: center;
             padding: 10px;
             background-color: #f5f5f5;
+            z-index: 9999; /* 広告が他の要素に被られないようにz-indexを設定 */
         }
     </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5433245635181525" crossorigin="anonymous"></script>
@@ -45,20 +47,11 @@
     </div>
 
     <div id="ad-container">
-        <ins class="adsbygoogle"
-            style="display:block; text-align:center;"
-            data-ad-layout="in-article"
-            data-ad-format="fluid"
-            data-ad-client="ca-pub-5433245635181525"
-            data-ad-slot="6890935653"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <!-- admax -->
+        <script src="https://adm.shinobi.jp/s/c0ccff07b48187de0810a681981aace8"></script>
+        <!-- admax -->
     </div>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5433245635181525"
-     crossorigin="anonymous"></script>
-    
     <script>
         function getMobileOperatingSystem() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
