--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
+            margin-top: 20px; /* 上部に余白を追加 */
             text-align: center;
             padding: 10px;
             background-color: #f5f5f5;
