--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         }
     </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5433245635181525" crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-5433245635181525">
 </head>
 <body>
     <div>
