--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <meta name="google-adsense-account" content="ca-pub-5433245635181525">
 </head>
 <body>
+    <!-- admax -->
+<script src="https://adm.shinobi.jp/s/04312f835ff727d2922f697a46a7b275"></script>
+<!-- admax -->
     <div>
         <img src="app-icon.png" alt="アプリアイコン" class="app-icon">
         <h1>カラオケ館公式アプリ</h1>
