--- a/index.html
+++ b/index.html
@@ -112,5 +112,6 @@
 
         setTimeout(redirectCountdown, 1000);
     </script>
+    <!--shinobi1--><script type="text/javascript" src="//xa.shinobi.jp/ufo/191577100"></script><noscript><a href="//xa.shinobi.jp/bin/gg?191577100" target="_blank"><img src="//xa.shinobi.jp/bin/ll?191577100" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript><!--shinobi2-->
 </body>
 </html>
