--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 </head>
 <body>
 <!-- admax -->
-<script src="https://adm.shinobi.jp/s/f9515c87d3751a68958bb24758adf9a2"></script>
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "f9515c87d3751a68958bb24758adf9a2",type: "overlay"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
 <!-- admax -->
     <div>
         <img src="app-icon.png" alt="アプリアイコン" class="app-icon">
