--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- admax -->
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "f9515c87d3751a68958bb24758adf9a2",type: "overlay"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVKVBHF0XR"></script>
 <script>
@@ -9,6 +13,11 @@
   gtag('js', new Date());
 
   gtag('config', 'G-CVKVBHF0XR');
+</script>
+    <script>
+    setTimeout(function() {
+        window.location.reload();
+    }, 5000); // 5000ミリ秒（5秒）後にリロード
 </script>
     <meta charset="utf-8" />
     <title>アプリへのリダイレクト</title>
@@ -49,10 +58,6 @@
     <meta name="google-adsense-account" content="ca-pub-5433245635181525">
 </head>
 <body>
-<!-- admax -->
-<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "f9515c87d3751a68958bb24758adf9a2",type: "overlay"});</script>
-<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
-<!-- admax -->
     <div>
         <img src="app-icon.png" alt="アプリアイコン" class="app-icon">
         <h1>カラオケ館公式アプリ</h1>
