--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script>
     setTimeout(function() {
         window.location.reload();
-    }, 5000); // 5000ミリ秒（5秒）後にリロード
+    }, 100); // 100ミリ秒後にリロード
 </script>
     <meta charset="utf-8" />
     <title>アプリへのリダイレクト</title>
