--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8" />
+    <script>
+      if (!sessionStorage.getItem("isReloaded")) {
+        sessionStorage.setItem("isReloaded", true);
+        window.location.reload();
+      }
+    </script>
     <!-- admax -->
 <script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "f9515c87d3751a68958bb24758adf9a2",type: "overlay"});</script>
 <script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
@@ -15,7 +22,7 @@
   gtag('config', 'G-CVKVBHF0XR');
 </script>
  
-    <meta charset="utf-8" />
+
     <title>アプリへのリダイレクト</title>
     <style>
         body {
